projects/expenseTracker/expenses/main.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");

:root {
  --purple: #9d5dea;
  --blackBG: #242326;
  --darker: #353436;
  --lightishGray: #474648;
  --green: #4ff85d;
  --yellow: #f8f84f;
  --red: #f84f4f;
  --textWhite: #c7c7c7;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;

  min-height: 100vh;

  background-color: var(--blackBG);
  font-family: "Roboto Mono", monospace;
  color: var(--textWhite);
  /*color: #9d5dea;*/
}

/*
    ___  _____   ______
    / _ \/  _/ | / / __/
  / // // / | |/ /\ \  
  /____/___/ |___/___/  
                        
  */

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.mainTable {
  display: flex;

  flex-direction: column;
  align-items: center;

  width: 775px;
  height: 600px;
  max-height: 600px;

  background-color: var(--darker);
  border-radius: 40px;
}

/*
    _        _    _       _                _         
  | |_ __ _| |__| |___  | |_  ___ __ _ __| |___ _ _ 
  |  _/ _` | '_ | / -_) | ' \/ -_/ _` / _` / -_| '_|
    \__\__,_|_.__|_\___| |_||_\___\__,_\__,_\___|_|  
  */

.tableHeader {
  height: 100px;
  display: flex;
  width: 90%;
  align-items: center;
  font-size: 30px;
  justify-content: space-between;
}

.balance {
  padding: 25px 0px;
  color: var(--purple);
}

.currency {
  width: 30px;
  max-width: 150px;
  text-overflow: ellipsis;
}
.selectors {
  background-color: var(--darker);
  color: var(--textWhite);
  border: none;
  color: var(--purple);
}

/*
            _    _   _                _         
    __ _ __| |__| | | |_  ___ __ _ __| |___ _ _ 
  / _` / _` / _` | | ' \/ -_/ _` / _` / -_| '_|
  \__,_\__,_\__,_| |_||_\___\__,_\__,_\___|_|  
  */

.addTable {
  display: flex;
  margin-top: 15px;
  justify-content: space-around;
  align-items: center;

  width: 735px;
  height: 71px;

  background-color: var(--darker);
  border-radius: 60px;
}

.inputName {
  width: 246px;
  height: 42px;
  border-radius: 60px;
  border: none;
  background-color: var(--lightishGray);
  text-align: center;
  color: var(--textWhite);
}
.inputName::placeholder {
  text-align: center;
  color: #353436;
  font-family: "Roboto Mono", monospace;
  font-weight: 700;
}

.inputAmount {
  width: 141px;
  height: 42px;
  border-radius: 60px;
  border: none;
  background-color: #474648;
  text-align: center;
  color: var(--textWhite);
}

.inputAmount::placeholder {
  text-align: center;
  color: var(--darker);
  font-family: "Roboto Mono", monospace;
  font-weight: 700;
  font-size: 15px;
}

.inputDate {
  width: 141px;
  height: 42px;
  border-radius: 60px;
  border: none;
  background-color: var(--lightishGray);
}

.datepicker {
  display: inline-flex;
  position: relative;
  overflow: clip;
}
.datepicker:focus-within {
  outline: black auto 2px;
}
.datepicker > input[type="date"] {
  position: absolute;
  top: 0;
  left: 0;
  width: 300%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}
.datepicker > input[type="date"]::-webkit-calendar-picker-indicator {
  position: absolute;
  top: -150%;
  left: -150%;
  width: 300%;
  height: 300%;
  cursor: pointer;
}

.dateImage {
  width: 30px;
  height: 30px;
  filter: hue-rotate(0, 0, 20);
  padding-bottom: 5px;
}

form {
  display: flex;
  justify-content: space-between;
  width: 80%;
  align-items: center;
}
.submitButton {
  padding: 10px 20px;
  border-radius: 60px;
  border: none;

  background-color: var(--purple);
  font-weight: 700;
}
/*
  _________   ___  __   ____
  /_  __/ _ | / _ )/ /  / __/
  / / / __ |/ _  / /__/ _/  
  /_/ /_/ |_/____/____/___/  
*/

table {
  display: table;
  flex-direction: column;
  width: 700px;

  max-height: 300px !important;
  overflow-y: auto !important;

  border-collapse: collapse;
}

th,
td {
  border-bottom: 1px solid gray;
  padding: 10px 5px;

  text-align: center;
  word-break: break-all;
}

th {
  font-size: 22px;
  color: var(--purple);
}

td {
  color: var(--textWhite);
}

tbody {
  color: var(--purple);
  display: table-row-group;
  vertical-align: middle;
}

.pending {
  color: var(--yellow);
}

.approved {
  color: var(--green);
}

.denied {
  color: var(--red);
}

